...
                android:textSize="12sp" />

            <Button
                android:id="@+id/chatWithDriverButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Chat"
                android:textSize="12sp" />

            <Button
                android:id="@+id/riderViewTripButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="View"
                android:textSize="12sp" />
        </LinearLayout>

    </TableRow>

    <TableRow
...
