...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rider.HomePage">

    <Button
        android:id="@+id/RiderTripsListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="viewTrips"
        android:text="View Trips"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
